--- a/stepper.html
+++ b/stepper.html
@@ -22,5 +22,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="stepper">
-    <p>Mijn simpele steper node</p>
+    <p>Mijn simpele stepper node</p>
 </script>
