--- a/stepper.html
+++ b/stepper.html
@@ -3,11 +3,16 @@
         category: 'function',
         color: '#a6bbcf',
         defaults: {
-            name: {value:""}
+            name: {value:""},
+            steps: {value: 48},
+            pin1: {value: 2},
+            pin2: {value: 3},
+            pin3: {value: 4},
+            pin4: {value: 5}
         },
         inputs:1,
         outputs:1,
-        icon: "file.png",
+        icon: "settings.png",
         label: function() {
             return this.name||"stepper";
         }
@@ -18,6 +23,18 @@
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
+    </div>
+    <div class="form-row">
+        <label for="node-input-steps"><i class="icon-tag"></i> Steps</label>
+        <input type="number" id="node-input-steps" placeholder="Steps">
+    </div>
+    <div class="form-row">
+        <label for="node-input-pin1"><i class="icon-tag"></i> Pin 1</label>
+        <input type="number" id="node-input-pin1" placeholder="Pin 1">
+    </div>
+    <div class="form-row">
+        <label for="node-input-pin2"><i class="icon-tag"></i> Pin 2</label>
+        <input type="number" id="node-input-pin2" placeholder="Pin 2">
     </div>
 </script>
 
