--- a/stepper.html
+++ b/stepper.html
@@ -36,6 +36,18 @@
         <label for="node-input-pin2"><i class="icon-tag"></i> Pin 2</label>
         <input type="number" id="node-input-pin2" placeholder="Pin 2">
     </div>
+    <div class="form-row">
+        <label for="node-input-pin3"><i class="icon-tag"></i> Pin 3</label>
+        <input type="number" id="node-input-pin3" placeholder="Pin 3">
+    </div>
+    <div class="form-row">
+        <label for="node-input-pin4"><i class="icon-tag"></i> Pin 4</label>
+        <input type="number" id="node-input-pin4" placeholder="Pin 4">
+    </div>
+    <div class="form-row">
+        <label for="node-input-pin5"><i class="icon-tag"></i> Pin 5</label>
+        <input type="number" id="node-input-pin5" placeholder="Pin 5">
+    </div>
 </script>
 
 <script type="text/x-red" data-help-name="stepper">
